# ESPro

./: .gitignore  CMakeLists.txt  README.md  TODO.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/: copilot-instructions.md
components/i2c_bsp/: i2c_bsp.c  i2c_bsp.h
main/: CMakeLists.txt  app_manager.c  app_manager.h  boot_sound.c  boot_sound.h  hw_config.h  idf_component.yml  main.c  music_player.c  music_player.h  screen_clock.c  screen_compass.c  screen_menu.c  screen_menu.h  screen_settings.c  screen_settings.h  screen_tamafi.c  screen_tamafi.h  secrets.h.example  wifi_time.c  wifi_time.h
main/audio/: boot_sound.c  boot_sound.h  mic_input.c  mic_input.h  music_player.c  music_player.h
main/core/: app_manager.c  app_manager.h  main.c
main/screens/: screen_assistant.c  screen_assistant.h  screen_clock.c  screen_clock.h  screen_compass.c  screen_compass.h  screen_hud.c  screen_hud.h  screen_menu.c  screen_more.c  screen_more.h  screen_settings.c  screen_settings.h  screen_tamafi.c  screen_tamafi.h  screen_wifi_cfg.c  screen_wifi_cfg.h
main/services/: ble_calendar.c  ble_calendar.h  deepseek.c  deepseek.h  game_dino.c  game_dino.h  game_maze.c  game_maze.h  game_race.c  game_race.h  gesture.c  gesture.h  macropad.c  macropad.h  pomodoro.c  pomodoro.h  sd_log.c  sd_log.h  task_manager.c  task_manager.h  weather.c  weather.h  wellness.c  wellness.h  wifi_prov.c  wifi_prov.h  wifi_time.c  wifi_time.h
tools/: ai_server.py  macropad_listener.py  pc_monitor.py  requirements_ai.txt  serial_log.py
