idf_component_register(
    SRCS "core/main.c"
         "core/app_manager.c"
         "audio/boot_sound.c"
         "audio/music_player.c"
         "audio/mic_input.c"
         "screens/screen_clock.c"
         "screens/screen_menu.c"
         "screens/screen_settings.c"
         "screens/screen_tamafi.c"
         "screens/screen_wifi_cfg.c"
         "screens/screen_assistant.c"
         "services/wifi_time.c"
         "services/wifi_prov.c"
         "services/weather.c"
         "services/sd_log.c"
         "services/game_maze.c"
         "services/macropad.c"
    INCLUDE_DIRS "." "core" "audio" "screens" "services"
    REQUIRES bt
    PRIV_REQUIRES i2c_bsp lcd_bl_pwm_bsp nvs_flash esp_http_client esp_http_server esp_wifi esp_netif esp_event esp_timer driver esp_driver_i2s json spiffs mbedtls minimp3 esp_hid espressif__esp_codec_dev espressif__esp_audio_codec)
